recurring-rev-package/force-app/main/default/objects/Quote/fields/RRV_Churn_Amount__c.field-meta.xml
<CustomField>
    <fullName>RRV_Churn_Amount__c</fullName>
    <label>Churn Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>(StartingQuantity - Quantity) x annualized unit price, where Quantity &lt; StartingQuantity</description>
</CustomField>