recurring-rev-package/force-app/main/default/objects/Quote/fields/RRV_New_ARR__c.field-meta.xml
<CustomField>
    <fullName>RRV_New_ARR__c</fullName>
    <label>New ARR</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>ARR from lines where StartingQuantity = 0 or null</description>
</CustomField>