recurring-rev-package/force-app/main/default/objects/Quote/fields/RRV_NonRecurring_Rev__c.field-meta.xml
<CustomField>
    <fullName>RRV_NonRecurring_Rev__c</fullName>
    <label>Non-Recurring Revenue</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Sum of NetTotalPrice for one-time (no BillingFrequency) quote line items</description>
</CustomField>