recurring-rev-package/force-app/main/default/objects/Quote/fields/RRV_Renewed_ARR__c.field-meta.xml
<CustomField>
    <fullName>RRV_Renewed_ARR__c</fullName>
    <label>Renewed ARR</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>ARR from lines where Quantity = StartingQuantity &gt; 0</description>
</CustomField>