recurring-rev-package/force-app/main/default/objects/Quote/fields/RRV_Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>RRV_Total_ARR__c</fullName>
    <label>Total ARR</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Sum of annualized ARR across all active lines</description>
</CustomField>