recurring-rev-package/force-app/main/default/objects/Quote/fields/RRV_Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>RRV_Total_Contract_Value__c</fullName>
    <label>Total Contract Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Sum of NetTotalPrice across all lines</description>
</CustomField>