recurring-rev-package/force-app/main/default/objects/Quote/fields/RRV_Upsell_Amount__c.field-meta.xml
<CustomField>
    <fullName>RRV_Upsell_Amount__c</fullName>
    <label>Upsell Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>(Quantity - StartingQuantity) x annualized unit price, where Quantity &gt; StartingQuantity</description>
</CustomField>