recurring-rev-package/force-app/main/default/objects/Quote/fields/RRV_Year1_ARR__c.field-meta.xml
<CustomField>
    <fullName>RRV_Year1_ARR__c</fullName>
    <label>Year 1 ARR</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>ARR from lines overlapping months 1-12 from quote start</description>
</CustomField>